<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeatFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buildingSeat"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/roomSeat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seatNumberSeat"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionSeat"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Spinner
                android:id="@+id/startTimeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:popupBackground="@drawable/spinner_popup_bg"/>

            <Spinner
                android:id="@+id/durationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reserve"
                android:id="@+id/reserve"
                android:layout_weight="1"
                android:gravity="center"/>

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <TableRow
            android:id="@+id/past_r1"
            android:background="#5F6A74"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="Current Reservations"
                android:textColor="@color/white"/>
        </TableRow>

        <TableRow
            android:id="@+id/past_r2"
            android:background="#929BA6"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="Date"
                android:textSize="15dp"
                android:gravity="center"
                android:padding="4dp"/>


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Start"
                android:textStyle="bold"
                android:textSize="15dp"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="End"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15dp"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Room"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="4dp"/>


        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currentReservation"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:background="#EFF3F9"/>


    </LinearLayout>



</FrameLayout>