...
                android:layout_weight="1"
                android:text="Upcoming Reservation"
                android:textStyle="bold"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#DCE5EE"
                android:textColor="@color/black"
...
                android:padding="4dp"/>


        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingReservation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EFF3F9"/>

        <TableRow
...

        </TableRow>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pastInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EFF3F9"/>


...
